--- a/assets/css/CSS.css
+++ b/assets/css/CSS.css
@@ -41,7 +41,7 @@
 	/*--------------------------------Background------------------------------------------------*/
 
 	body {
-		background:url(pictures/Background.jpg) no-repeat center center fixed;
+		background:url(Background.jpg) no-repeat center center fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;		
